minor change name

--- a/custom_components/midea/manifest.json
+++ b/custom_components/midea/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "midea_ac",
+  "domain": "midea",
   "name": "Midea AC",
   "documentation": "https://github.com/NeoAcheron/midea-ac-py",
   "dependencies": [],
